# gmm-em

./: CMakeLists.txt  DataMatrix.h  Debug.h  EMGaussianMixtures.cxx  EMGaussianMixtures.h  Gaussian.cxx  ImageSeriesReader.h  ImageSeriesWriter.h  ImageSizeReader.h  ImageWriter.h  README.md  Sampling.h  Timer.h  main.cxx
